# GFOLD

./: .gitignore  CMakeLists.txt  GFOLD_demo.cpp  GFOLD_solver.cpp  GFOLD_solver.hpp  find_cfg.cpp  find_cfg.hpp  find_cfg_tool.cpp  find_tf.cpp  find_tf_2.cpp  find_tf_2.hpp  kos_pingpong.cpp  main.cpp  plot_recv_mode0.cpp
cpg_solver/: CMakeLists.txt
cpg_solver/GFOLD_solver/: GFOLD_solver.cpp  GFOLD_solver.hpp  GFOLD_solver_10.cpp  GFOLD_solver_100.cpp  GFOLD_solver_25.cpp  GFOLD_solver_3.cpp  GFOLD_solver_50.cpp  GFOLD_solver_backend_api.hpp  GFOLD_solver_backend_impl.inl
cpg_solver/variants/p3/: CMakeLists.txt
cpg_solver/variants/p4_n10/: CMakeLists.txt
cpg_solver/variants/p4_n100/: CMakeLists.txt
cpg_solver/variants/p4_n25/: CMakeLists.txt
cpg_solver/variants/p4_n50/: CMakeLists.txt
p3_cpg_solver/: README.html  cpg_solver.py  problem.pickle  setup.py
p3_cpg_solver/c/: CMakeLists.txt
p3_cpg_solver/c/include/: cpg_solve.h  cpg_workspace.h
p3_cpg_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
p3_cpg_solver/cpp/include/: cpg_module.hpp
p3_cpg_solver/cpp/src/: cpg_module.cpp
p4_cpg_solver/: README.html  cpg_solver.py  problem.pickle  setup.py
p4_cpg_solver/c/: CMakeLists.txt
p4_cpg_solver/c/include/: cpg_solve.h  cpg_workspace.h
p4_cpg_solver/c/solver_code/: CMakeLists.txt
p4_cpg_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
p4_cpg_solver/cpp/include/: cpg_module.hpp
p4_cpg_solver/cpp/src/: cpg_module.cpp
scripts/: comm.txt  config.txt  enu  gfold_demo  gfold_demo.ks  pingpong  raw_control_pitch_test.ks
solver_py/: EvilPlotting.py  config.py  solver.py
